# Spotty-AI-Detector

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
